// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a store with a primitive value (nested stores) 1`] = `
Object {
  "get": 5,
  "getSerialized": "5",
  "getTypeof": "number",
  "self": [Function],
  "selfSerialized": undefined,
  "selfTypeof": "function",
}
`;

exports[`creates a store with a primitive value 1`] = `
Object {
  "get": 5,
  "getSerialized": "5",
  "getTypeof": "number",
  "self": [Function],
  "selfSerialized": undefined,
  "selfTypeof": "function",
}
`;

exports[`creates a store with an object (nested stores) 1`] = `
Object {
  "get": bound Object {
    "val": 25,
  },
  "getSerialized": "{\\"val\\":25}",
  "getTypeof": "object",
  "self": [Function],
  "selfSerialized": undefined,
  "selfTypeof": "function",
}
`;

exports[`creates a store with an object 1`] = `
Object {
  "get": bound Object {
    "val": 25,
  },
  "getSerialized": "{\\"val\\":25}",
  "getTypeof": "object",
  "self": [Function],
  "selfSerialized": undefined,
  "selfTypeof": "function",
}
`;

exports[`handles debugging inner values of stores (nested stores) 1`] = `
Object {
  "get": 25,
  "getSerialized": "25",
  "getTypeof": "number",
  "self": [Function],
  "selfSerialized": undefined,
  "selfTypeof": "function",
}
`;

exports[`handles debugging inner values of stores 1`] = `
Object {
  "get": 25,
  "getSerialized": "25",
  "getTypeof": "number",
  "self": [Function],
  "selfSerialized": undefined,
  "selfTypeof": "function",
}
`;

exports[`handles displaying the shape of arrays (nested stores) 1`] = `
Object {
  "get": bound Array [
    0,
    2,
    4,
    6,
  ],
  "getSerialized": "[0,2,4,6]",
  "getTypeof": "object",
  "self": [Function],
  "selfSerialized": undefined,
  "selfTypeof": "function",
}
`;

exports[`handles displaying the shape of arrays (nested stores) 2`] = `
Array [
  [Function],
  [Function],
  [Function],
  [Function],
]
`;

exports[`handles displaying the shape of arrays 1`] = `
Object {
  "get": bound Array [
    0,
    2,
    4,
    6,
  ],
  "getSerialized": "[0,2,4,6]",
  "getTypeof": "object",
  "self": [Function],
  "selfSerialized": undefined,
  "selfTypeof": "function",
}
`;

exports[`handles displaying the shape of arrays 2`] = `
Array [
  [Function],
  [Function],
  [Function],
  [Function],
]
`;